# OS_8051

./: .gitignore  CMakeLists.txt  run.sh  setup.md
asm/: CMakeLists.txt  master_entry.asm
cmake/: ExportHex.cmake.in  SDCC8051.cmake
include/: CMakeLists.txt  firmware.h
linker/: 8051.lnk.in
slave/1/: CMakeLists.txt
slave/1/asm/: CMakeLists.txt  slave1_entry.asm
slave/1/include/: CMakeLists.txt  LCD.h  LCD_COMMAND.h  LCD_CONFIG.h  slave1.h
slave/1/src/: CMakeLists.txt  LCD.c  bridge.c  main.c
src/: CMakeLists.txt  bridge.c  main.c
